# app_samples

./: .gitignore  CodeCommitChecklist.md  LICENSE  OAT.xml  README.en.md  README.md  README_zh.md  changelog.md  代码提交规范.md  代码检视checklist.xlsx
AI/AIFunctionSet/: README_en.md  README_zh.md
AccessibilityService/AccessibilityService/: README.md  README_zh.md  build.gradle
Account/AppAccountManager/: README.md  README_zh.md  build-profile.json5  package.json
Account/DistributeAccount/: README.md  README_zh.md  package.json
Account/eTSAppAccountManager/: README_zh.md
Account/eTSDistributeAccount/: README_zh.md
AppSample/Chat/: README_en.md  README_zh.md  build-profile.json5  package.json
AppSample/Shopping/: README_zh.md  build-profile.json5  package.json
Basic/Container/: README.md  README_zh.md  build-profile.json5  package.json
Basic/Screenshot/: README.md  README_zh.md  package.json
Communication/RPC/: README_en.md  README_zh.md  package.json
Communication/Wlan/: README_zh.md  package.json
Communication/eTSWlan/: README_en.md  README_zh.md
CompleteApps/AstronautsGame/: README_zh.md
CompleteApps/AstronautsGame/astronauts_game/: BUILD.gn
CompleteApps/AstronautsGame/astronauts_game/include/: button.h  code_tab.h  common_init.h  game_logic.h  main.h  music.h  oled.h
CompleteApps/AstronautsGame/astronauts_game/src/: button.c  common_init.c  game_logic.c  main.c  music.c  oled.c
CompleteApps/AstronautsGame/common/netcfg/: BUILD.gn
CompleteApps/AstronautsGame/common/netcfg/include/: defines.h  network_config.h  network_server.h  softap.h  wifi_sta.h
CompleteApps/AstronautsGame/common/netcfg/src/: network_config.c  network_manager_service.c  network_server.c  softap.c  wifi_sta.c
CompleteApps/CityPosition/: README_zh.md  package.json
CompleteApps/DistributedSearch/: README.md  README_zh.md
CompleteApps/DistributedShoppingCart/: README.md  README_zh.md  build.gradle
CompleteApps/EnterAnimation/: README_zh.md  build-profile.json5  package.json
CompleteApps/FlipClock/: README.md  README_zh.md  package.json
CompleteApps/Http/: README_zh.md  package.json
CompleteApps/KikaInput/: README.md  README_zh.md  build-profile.json5  build.gradle  gradlew  gradlew.bat  hvigorfile.js  package-lock.json  package.json
CompleteApps/Navigation/: README_zh.md  build-profile.json5  package.json
CompleteApps/TicTacToeGame/: README.md  README_zh.md
DFX/Debug/: README_zh.md  package.json
DFX/FaultLogger/: README.md  README_zh.md  package.json
DFX/JsDotTest/: README_zh.md  package.json
DFX/Logger/: README.md  README_zh.md  build-profile.json5  package.json
ETSUI/AdaptiveCapabilities/: README_zh.md  package.json
ETSUI/ArkUIAnimation/: README.md  README_zh.md  package.json
ETSUI/BringApp/: README_zh.md  package.json
ETSUI/BuildCommonView/: README_zh.md  build.gradle  package.json
ETSUI/Canvas/: README_zh.md  package.json
ETSUI/Component/: README.md  build.gradle  package.json
ETSUI/CustomComponent/: README_en.md  README_zh.md  build-profile.json5  package.json
ETSUI/DefiningPageLayoutAndConnection/: README_zh.md  package.json
ETSUI/Drag/: README_en.md  README_zh.md  package.json
ETSUI/EtsProcess/: README_zh.md
ETSUI/Gallery/: README_zh.md  package.json
ETSUI/Game2048/: README_zh.md  package.json
ETSUI/Lottie/: README_zh.md  package.json
ETSUI/MediaQuery/: README.md  README_zh.md  build-profile.json5  package.json
ETSUI/MouseEvent/: README.md  README_zh.md  build-profile.json5  package.json
ETSUI/PatternLock/: README_zh.md  package.json
ETSUI/Process/: README.md  README_zh.md  package.json
ETSUI/QRCode/: README_zh.md  package.json
ETSUI/Search/: README_zh.md  package.json
ETSUI/TransitionAnimation/: README_zh.md  package.json
ETSUI/UpgradePopup/: README_zh.md  build-profile.json5  package.json
ETSUI/Web/: README_en.md  README_zh.md  package.json
ETSUI/XComponent/: README_zh.md  package.json
ETSUI/eTSArkUIAnimation/: READEME_zh.md
ETSUI/eTSBuildCommonView/: README_zh.md
ETSUI/eTSCanvas/: README_zh.md  build.gradle
ETSUI/eTSComponent/: README.md  build.gradle  gradle.properties
ETSUI/eTSCustomComponent/: README_zh.md  package.json
ETSUI/eTSDefiningPageLayoutAndConnection/: README_zh.md  build.gradle
ETSUI/eTSLottie/: README_zh.md  build.gradle
Graphics/JsWebGL/: README.md  (+2 more)
Native/KikaInput/entry/src/main/cpp/: CMakeLists.txt
Native/KikaInput/entry/src/main/cpp/input_service/: pinyin_decode_service.cpp
Native/KikaInput/entry/src/main/cpp/utils/: napi_utils.h
Native/NativeAPI/entry/src/main/cpp/: CMakeLists.txt  chess.cpp  chess.h
Native/NativeAPI/entry/src/main/cpp/common/: plugin_common.h
Native/NativeAPI/entry/src/main/cpp/types/libchess/: index.d.ts  package.json
(+4722 files in other folders)
