# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("astronauts_game") {
    sources = [
        "src/game_logic.c",
        "src/button.c",
        "src/common_init.c",
        "src/main.c",
        "src/oled.c",
        "src/music.c"
    ]

    include_dirs = [
        "//utils/native/lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//base/iot_hardware/peripheral/interfaces/kits",
        "//applications/sample/wifi-iot/app/common/include",
        "//applications/sample/wifi-iot/app/astronauts_game/include",
        "//device/hisilicon/hispark_pegasus/sdk_liteos/include"       
    ]
}
