# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("netcfg") {
    sources = [
        "src/network_config.c",
        "src/network_server.c",
        "src/network_manager_service.c",
        "src/softap.c",
        "src/wifi_sta.c"
    ]

    include_dirs = [
        "include",
        "//applications/sample/wifi-iot/app/common/include",
        "//base/iot_hardware/peripheral/interfaces/kits",
        "//foundation/communication/wifi_lite/interfaces/wifiservice",
        "//kernel/liteos_m/kal/cmsis",
        "//kernel/liteos_m/cmsis",
        "//third_party/mbedtls/include/mbedtls",
        "//utils/native/lite/include",
        "//device/hisilicon/hispark_pegasus/sdk_liteos/third_party/lwip_sack/include",
        "//device/hisilicon/hispark_pegasus/sdk_liteos/platform/os/Huawei_LiteOS/components/lib/libsec/include",
        "//base/security/deviceauth/frameworks/deviceauth_lite/source",
    ]
}
